# EngineSearch

./: .gitignore  CMakeLists.txt  EngineSearch.cpp  README.md
EngineSearch/: CMakeLists.txt  EngineSearch.cpp  EngineSearch.h
EngineSearch/configs/: answers.json  config.json  requests.json
EngineSearch/gtest/: CMakeLists.txt  MainTest.cpp  main_test.cpp
EngineSearch/include/: ConverterJSON.cpp  ConverterJSON.h  Entry.cpp  ExeptNotFoundFile.h  InvertedIndex.cpp  InvertedIndex.h  SearchServer.h
EngineSearch/resources/: file001.txt  file002.txt  file003.txt  file005.txt
EngineSearch/src/: ConverterJSON.cpp  ConverterJSON.h  Entry.cpp  InvertedIndex.cpp  InvertedIndex.h  SearchServer.cpp
configs/: answers.json  config.json  requests.json
gtest/: CMakeLists.txt  MainTest.cpp
include/: ConverterJSON.h  Entry.h  ExeptNotFoundFile.h  InvertedIndex.h  RelativeIndex.h  SearchServer.h
resources/: file001.txt  file002.txt  file003.txt  file004.txt
src/: ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp
